Add better reward displays for quests